--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -64,12 +64,13 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
     api 'androidx.appcompat:appcompat:1.6.1'
     api 'androidx.core:core-ktx:1.7.0'//1.10.1
-    api 'com.google.android.material:material:1.5.0'//1.9.0
+    api 'com.google.android.material:material:1.9.0'//1.9.0
     api 'androidx.activity:activity:1.7.0'
     api 'androidx.fragment:fragment-ktx:1.6.2'
     api 'androidx.activity:activity-ktx:1.7.2'
     api 'androidx.documentfile:documentfile:1.0.1'
     api 'androidx.exifinterface:exifinterface:1.3.6'
+    api 'androidx.annotation:annotation:1.7.1'
 
     //////////////////////////////////////////////////////////////////
     //multidex
@@ -109,7 +110,6 @@ dependencies {
     //////////////////////////////////////////////////////////////////
     //room cachek
     api 'androidx.room:room-runtime:2.5.2'
-
     kapt 'androidx.room:room-compiler:2.5.2'
 
     //datastore
