--- a/uicorek/build.gradle
+++ b/uicorek/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation project(project.path.replace(project.name, '') + ':basick')
     api 'androidx.constraintlayout:constraintlayout:2.1.4'
     api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    api 'androidx.recyclerview:recyclerview:1.2.1'
 
     //test
     testImplementation 'junit:junit:4.13.2'
