--- a/basicktest/src/main/AndroidManifest.xml
+++ b/basicktest/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.mozhimen.basicktest">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission
         android:name="android.permission.INSTALL_PACKAGES"
@@ -99,7 +98,7 @@
             android:name=".elemk.android.ElemKGestureActivity"
             android:exported="false" />
 
-        <service android:name=".elemk.android.ElemKService" />
+
 
         <receiver
             android:name=".elemk.android.ElemKAutoRunReceiver"
