--- a/composektest/build.gradle
+++ b/composektest/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.mozhimen.composektest'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.mozhimen.composektest"
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    implementation project(':basick')
+
     //test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
