--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -128,7 +128,7 @@ dependencies {
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
 
     //gson
-    implementation 'com.google.code.gson:gson:2.10.1'
+    api 'com.google.code.gson:gson:2.10.1'
 
     //kotlin
     //implementation 'org. jetbrains.kotlinx: kotlinx-serialization-json:1.3.2'
