--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+#-XX\:+UseParallelGC ???????G1?????????????????????
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -XX\:+UseParallelGC
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -24,4 +25,20 @@ android.injected.testOnly=false
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
+
+
+# ????
+# migrate your project to use non-transitive R classes
 android.nonTransitiveRClass=true
+# ??????
+org.gradle.parallel=true
+# ???????gradle3.4???????
+org.gradle.daemon=true
+# ??????
+org.gradle.configuration-cache=true
+# ??????
+org.gradle.caching=true
+# ???????????????????????????????????????????????????????
+# Use this flag carefully, in case some of the plugins are not fully compatible.
+org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache-problems=warn
