--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -110,6 +110,7 @@ dependencies {
 
     //////////////////////////////////////////////////////////////////
     //room cachek
+    api 'androidx.room:room-common:2.5.2'
     api 'androidx.room:room-runtime:2.5.2'
     kapt 'androidx.room:room-compiler:2.5.2'
 
