--- a/basicktest/build.gradle
+++ b/basicktest/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation project(':basick')
     implementation project(':xmlk')
     implementation project(':AXmlKit:recyclerk')
-    implementation project(':ANavigateKit_Navigation:navigatek_navigation')
+    implementation project(':ANavigateKit:navigatek_navigation')
     implementation project(':AManifestKit_XXPermissions:manifestk_xxpermissions')
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
