--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -121,7 +121,8 @@ dependencies {
     api 'com.google.code.gson:gson:2.10.1'
 
     //kotlin
-    //implementation 'org. jetbrains.kotlinx: kotlinx-serialization-json:1.3.2'
+    api 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
+    api 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.3.2'
 
     //////////////////////////////////////////////////////////////////
     //firebase
