--- a/basick/build.gradle
+++ b/basick/build.gradle
@@ -66,9 +66,10 @@ dependencies {
     api 'androidx.core:core-ktx:1.12.0'//1.10.1
     api 'com.google.android.material:material:1.11.0'//1.9.0
 
-    api 'androidx.activity:activity:1.7.0'
-    api 'androidx.fragment:fragment-ktx:1.6.2'
+    api 'androidx.activity:activity:1.7.2'
     api 'androidx.activity:activity-ktx:1.7.2'
+    api 'androidx.fragment:fragment:1.6.2'
+    api 'androidx.fragment:fragment-ktx:1.6.2'
     api 'androidx.documentfile:documentfile:1.0.1'
     api 'androidx.exifinterface:exifinterface:1.3.6'
     api 'androidx.annotation:annotation:1.7.1'
@@ -93,17 +94,28 @@ dependencies {
 
     //////////////////////////////////////////////////////////////////
     //lifecycle
-    api 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha03'
-    api 'androidx.lifecycle:lifecycle-livedata:2.6.1'
-    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha03'
-    api "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.4.0"
-    api "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    api "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    api "androidx.lifecycle:lifecycle-common-java8:2.5.1"// 如果用Java8, 用于替代compiler
+//    api "androidx.lifecycle:lifecycle-extensions:2.5.1"// lifecycle,livedata,viewmodel
+    api "androidx.lifecycle:lifecycle-runtime:2.5.1"// lifecycle
+    api "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+    api "androidx.lifecycle:lifecycle-service:2.5.1"// optional - helpers for implementing LifecycleOwner in a Service
+    api "androidx.lifecycle:lifecycle-process:2.5.1"// optional - ProcessLifecycleOwner provides a lifecycle for the whole application process
+
+    //livedata
+    api 'androidx.lifecycle:lifecycle-livedata:2.5.1'// livedata
+    api 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    api "androidx.lifecycle:lifecycle-reactivestreams:2.5.1"
+
+    //viewmodel
+    api 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'// viewmodel
+    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    api "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1"
 
     //////////////////////////////////////////////////////////////////
     //room cachek
     api 'androidx.room:room-common:2.5.2'
     api 'androidx.room:room-runtime:2.5.2'
+    api 'androidx.room:room-ktx:2.5.2'
     kapt 'androidx.room:room-compiler:2.5.2'
 
     //datastore
