--- a/basicktest/src/main/AndroidManifest.xml
+++ b/basicktest/src/main/AndroidManifest.xml
@@ -50,11 +50,6 @@
         <activity
             android:name=".BasicKActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity> <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
         <!-- animk -->
         <activity
@@ -128,7 +123,13 @@
             android:exported="false" />
         <activity
             android:name=".stackk.StackKCbActivity"
-            android:exported="false" /> <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
         <!-- taskk -->
         <activity
             android:name=".taskk.TaskKLocationActivity"
