--- a/basick_test/build.gradle
+++ b/basick_test/build.gradle
@@ -41,9 +41,12 @@ android {
 }
 
 dependencies {
-    implementation project(':basick')
+    implementation project(':mvvmk')
     implementation project(':xmlk')
+    implementation project(':AStackKit:stackk')
+    implementation project(':AStackKit:stackk_process')
     implementation project(':AXmlKit:recyclerk')
+    implementation project(':ATaskKit:taskk_executor')
     implementation project(':ANavigateKit:navigatek_navigation')
     implementation project(':AManifestKit_XXPermissions:manifestk_xxpermissions')
 
