--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22"
+//        classpath 'com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin:1.9.22-1.0.18'
+        //1.9.22-1.0.18
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
