--- a/composek/build.gradle
+++ b/composek/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    implementation project(':KUtilKit:utilk_android')
+
     api 'androidx.activity:activity-compose:1.8.2'
 
     //compose
