--- a/xmlktest/build.gradle
+++ b/xmlktest/build.gradle
@@ -42,7 +42,7 @@ android {
 
 dependencies {
     implementation project(':xmlk')
-    implementation project(':basick')
+    implementation project(':mvvmk')
 
     //test
     testImplementation 'junit:junit:4.13.2'
